Docker using AS2 1.1.3 image

--- a/control/docker-compose.yaml
+++ b/control/docker-compose.yaml
@@ -1,29 +1,27 @@
 services:
   drone-course-control:
     build:
-      context: .
-      dockerfile: Dockerfile
-      shm_size: '2gb'
+      context: ..
+      dockerfile: control/Dockerfile
     image: drone-course-control:latest
     shm_size: '2gb'
     container_name: project_cvar_upm_drone_course_control
     hostname: drone-course-control-dev
     privileged: true
+    working_dir: /root/project_cvar_upm_drone_course/control
     environment:
-      - HOST_UID=${HOST_UID:-501}
-      - HOST_GID=${HOST_GID:-20}
       - VNC_ENABLE=1
       - VNC_RESOLUTION=1920x1080
       - VNC_DEPTH=24
       - ROS_DOMAIN_ID=0
-      - ROS_LOCALHOST_ONLY=0
+      - ROS_LOCALHOST_ONLY=1
       - DISPLAY=$DISPLAY
       - XAUTHORITY=$XAUTHORITY
     ports:
       - "5901:5901" # VNC server
     volumes:
+      - ../:/root/project_cvar_upm_drone_course
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
-      - ~/.Xauthority:/root/.Xauthority:rw
     command: bash -c "tail -f /dev/null"
     stdin_open: true
     tty: true
@@ -34,4 +32,3 @@ services:
         limits:
           cpus: "4"
           memory: 8G
-
