--- a/control/Dockerfile
+++ b/control/Dockerfile
@@ -1,42 +1,31 @@
-FROM alvgaona/ros:humble-desktop
+FROM aerostack2/nightly-humble:81518c85217bf95a34691263bfc7e766aec295a4
+
+USER root
+SHELL ["/bin/bash", "-c"]
 
 ARG DEBIAN_FRONTEND=noninteractive
 
-SHELL ["/bin/bash", "-c"]
-
-USER root
-
-RUN apt-get update && apt-get install -y \
-    python3-pip \
+RUN apt-get update && apt-get install -y --no-install-recommends \
     python3-colcon-common-extensions \
+    python3-rosdep \
     tmux \
     tmuxinator \
-    iputils-ping \
-    && rm -rf /var/lib/apt/lists/*
+  && rm -rf /var/lib/apt/lists/*
 
-RUN mkdir -p /home/humble/drone_course_ws && chown -R humble:humble /home/humble/drone_course_ws
+WORKDIR /root/project_cvar_upm_drone_course
+COPY . /root/project_cvar_upm_drone_course
 
-WORKDIR /home/humble/drone_course_ws
+WORKDIR /root/project_cvar_upm_drone_course/control/drone_course_ws
+RUN source /opt/ros/humble/setup.bash \
+  && source /root/aerostack2_ws/install/setup.bash \
+  && (rosdep init 2>/dev/null || true) \
+  && rosdep update \
+  && rosdep install --from-paths src --ignore-src -r -y \
+  && colcon build --symlink-install
 
-COPY --chown=humble:humble drone_course_ws/src ./src
-COPY --chown=humble:humble *.py ./
-COPY --chown=humble:humble *.bash ./
-COPY --chown=humble:humble config ./config
+RUN echo "source /opt/ros/humble/setup.bash" >> /root/.bashrc \
+  && echo "source /root/aerostack2_ws/install/setup.bash" >> /root/.bashrc \
+  && echo "[ -f /root/project_cvar_upm_drone_course/control/drone_course_ws/install/setup.bash ] && source /root/project_cvar_upm_drone_course/control/drone_course_ws/install/setup.bash" >> /root/.bashrc
 
-USER humble
-
-RUN rosdep update --rosdistro humble
-
-USER root
-
-RUN apt-get update && \
-    su - humble -c "cd /home/humble/drone_course_ws && rosdep install --from-paths src --ignore-src -r -y --rosdistro humble" && \
-    rm -rf /var/lib/apt/lists/*
-
-USER humble
-
-RUN echo "source /opt/ros/humble/setup.bash" >> /home/humble/.bashrc && \
-    echo "source /home/humble/drone_course_ws/install/setup.bash" >> /home/humble/.bashrc && \
-    touch /home/humble/.Xauthority
-
-USER root
+WORKDIR /root/project_cvar_upm_drone_course
+CMD ["bash"]
